feat: implement film search functionality with pagination
- Add film search form and results controllers with ModelAndView
- Create paginated film service method with title filtering
- Implement custom JPQL query with relevance-based ordering
- Add search-films and films view templates
- Support shareable URLs with query parameters (?title=...&page=...)